# circfinity

./: .gitignore  CMakeLists.txt  README.md  compute.cpp  exprgen  index.html  main.cpp  package-lock.json  precompute.cpp  unrank.cpp  wasm_main.js  wasm_main.wasm
.github/workflows/: deploy.yml
assets/: index-B2Rip3mn.css  index-Bkarlrw4.js  index-CWM9kVNA.css  index-Ct5G_RVk.js  index-D8D7XPrh.js  index-DDItiaye.js  index-DTRObFKZ.js  index-D_dpBtVs.js  index-DznHmSYd.css  index-LQIRFhEr.js
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: 404.html  wasm_main.js  wasm_main.wasm
frontend/src/: App.jsx  Expr.jsx  Home.jsx  index.css  main.jsx
frontend/src/components/: AnimatedText.jsx  Graph.jsx
frontend/src/hooks/: Wasm.js
include/: compute.h  compute_data.h  uint128_t.h
src/: compute.cpp
tests/: test_compute.cpp  test_uint128.cpp
wasm/: CMakeLists.txt  build-test.sh  build.sh  vcpkg.json
wasm/include/: compute.h  compute_data.h
wasm/src/: compute.cpp  wasm_main.cpp
wasm/tests/: CMakeLists.txt  test_compute.cpp
